Added user menu (only list of users)

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -107,6 +107,8 @@
                     menu</a>
                 <a th:href="@{/roomseditor}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
                     rooms</a>
+                <a th:href="@{/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
+                    users</a>
                 <div class="text-center">
                     <span th:text="#{message.change-language}+': '"></span>
                     <a th:href="@{'/language?lang=en'}" th:text="#{message.locale.en}"></a><span> /</span>
