--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -3,13 +3,13 @@
 <meta charset="UTF-8">
 <head>
     <title>Hotel System</title>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/style.css}">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
@@ -19,14 +19,14 @@
                 <div class="card-header">
                     <h3 class="text-center" th:text="#{'message.rooms-page.header.' + ${headerName}}"></h3>
                 </div>
-                <form th:object="${room}" th:action="@{/rooms/save}" method="post">
+                <form th:object="${room}" th:action="@{admin/rooms/save}" method="post">
 
                     <p class="white" th:text="#{message.rooms-page.insert.roomnumber}">Insert room number:</p>
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fa fa-key"></i> </span>
                         </div>
-                        <input th:field="*{roomNumber}" name="roomNumber" type="number" class="form-control">
+                        <input th:field="*{number}" name="roomNumber" type="number" class="form-control">
                     </div>
                     <p class="white" th:text="#{message.rooms-page.select.class}">Select class:</p>
                     <div class="form-group input-group">
@@ -63,7 +63,7 @@
                         </div>
                         <input th:field="*{price}" name="price" type="number" class="form-control">
                     </div>
-                    <input hidden class="form-control" type="text" th:field="*{roomID}">
+                    <input hidden class="form-control" type="text" th:field="*{id}">
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"
@@ -72,7 +72,7 @@
                 </form>
                 <div>
                 </div>
-                <a th:href="@{/roomseditor/}" class="btn btn-dark btn-block"
+                <a th:href="@{/rooms/}" class="btn btn-dark btn-block"
                    th:text="#{message.rooms-page.button.back}">Back to the list of rooms</a>
             </article>
             <div class="text-center">
