--- a/src/main/resources/templates/roomsList.html
+++ b/src/main/resources/templates/roomsList.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <meta charset="UTF-8">
 <head>
     <title>Hotel System</title>
+    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/style.css}">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
@@ -20,7 +21,7 @@
             </div>
             <div class="card-body">
                 <p class="white" th:if="${roomsList.isEmpty()==true}" th:text="#{message.roomslist-page.norooms}">There
-                    is no rooms for booking in hotel now</p>
+                    are no rooms for booking in hotel now</p>
                 <table th:if="${roomsList.isEmpty()==false}" class="table table-bordered white">
                     <thead>
                     <tr>
@@ -29,23 +30,49 @@
                         <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
                         <th scope="col" th:text="#{message.hotel.class}">Class</th>
                         <th scope="col" th:text="#{message.roomslist-page.price}">Price</th>
+                        <th scope="col"
+                            th:text="#{message.roomseditor-page.edit}">Edit
+                        </th>
+                        <th scope="col"
+                            th:text="#{message.roomseditor-page.delete}" }>Delete
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
                     <th:block th:each="room : ${roomsList}">
                         <tr>
-                            <th th:text="${room.roomID}" scope="row">1</th>
-                            <td th:text="${room.roomNumber}"></td>
+                            <th th:text="${room.id}" scope="row">1</th>
+                            <td th:text="${room.number}"></td>
                             <td th:text="#{'message.capacity.'+${room.capacity}}"></td>
                             <td th:text="#{'message.class.'+${room.classID}}"></td>
                             <td th:text="${room.price}"></td>
+                            <td>
+                                <a
+                                   th:href="@{'/admin/rooms/edit/'+${room.id}}" class="btn btn-dark float-left"
+                                   th:text="#{message.roomseditor-page.edit}">Edit</a>
+                            </td>
+                            <td>
+                                <a
+                                   th:href="@{'/admin/rooms/delete/'+${room.id}}" class="btn btn-dark float-left"
+                                   th:text="#{message.roomseditor-page.delete}">Delete</a>
+                            </td>
                         </tr>
                     </th:block>
                     </tbody>
                 </table>
                 <div>
                 </div>
-                <a th:href="@{/index/}" class="btn btn-dark float-left" th:text="#{message.roomslist-page.button.home}">Back
+                <div th:if="${pageNumbers.size() > 1}" class="pagination">
+                    <a th:each="pageNumber : ${pageNumbers}"
+                       th:href="@{'/admin?page='+${pageNumber}}"
+                       class="btn btn-grey-small" th:text="${pageNumber}">Number</a>
+                </div>
+                <a
+                   th:href="@{'/admin/rooms/new'}" class="btn btn-dark float-right"
+                   th:text="#{message.roomseditor-page.newroom}">New room</a>
+                <div>
+                </div>
+                <a th:href="@{'/index/'}" class="btn btn-dark float-left" th:text="#{message.roomslist-page.button.home}">Back
                     to home page</a>
             </div>
             <div class="card-footer">
