--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -19,7 +19,7 @@
                 <div class="card-header">
                     <h3 class="text-center" th:text="#{'message.rooms-page.header.' + ${headerName}}"></h3>
                 </div>
-                <form th:object="${room}" th:action="@{admin/rooms/save}" method="post">
+                <form th:object="${room}" th:action="@{'/rooms/save'}" method="post">
 
                     <p class="white" th:text="#{message.rooms-page.insert.roomnumber}">Insert room number:</p>
                     <div class="input-group form-group">
