--- a/src/main/resources/templates/roomsList.html
+++ b/src/main/resources/templates/roomsList.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <meta charset="UTF-8">
+<meta name="_csrf" th:content="${_csrf.token}"/>
+<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 <head>
     <title>Hotel System</title>
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
@@ -30,10 +32,10 @@
                         <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
                         <th scope="col" th:text="#{message.hotel.class}">Class</th>
                         <th scope="col" th:text="#{message.roomslist-page.price}">Price</th>
-                        <th scope="col"
+                        <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')"
                             th:text="#{message.roomseditor-page.edit}">Edit
                         </th>
-                        <th scope="col"
+                        <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')"
                             th:text="#{message.roomseditor-page.delete}" }>Delete
                         </th>
                     </tr>
@@ -47,12 +49,12 @@
                             <td th:text="#{'message.class.'+${room.classID}}"></td>
                             <td th:text="${room.price}"></td>
                             <td>
-                                <a
+                                <a sec:authorize="hasRole('ROLE_ADMIN')"
                                    th:href="@{'/rooms/edit/'+${room.id}}" class="btn btn-dark float-left"
                                    th:text="#{message.roomseditor-page.edit}">Edit</a>
                             </td>
                             <td>
-                                <a
+                                <a sec:authorize="hasRole('ROLE_ADMIN')"
                                    th:href="@{'/rooms/delete/'+${room.id}}" class="btn btn-dark float-left"
                                    th:text="#{message.roomseditor-page.delete}">Delete</a>
                             </td>
@@ -85,12 +87,13 @@
                         </li>
                     </ul>
                 </nav>
-                <a
+                <a sec:authorize="hasRole('ROLE_ADMIN')"
                    th:href="@{'/rooms/new'}" class="btn btn-dark float-right"
                    th:text="#{message.roomseditor-page.newroom}">New room</a>
                 <div>
                 </div>
-                <a th:href="@{'/index/'}" class="btn btn-dark float-left" th:text="#{message.roomslist-page.button.home}">Back
+                <a th:href="@{'/index/'}" class="btn btn-dark float-left"
+                   th:text="#{message.roomslist-page.button.home}">Back
                     to home page</a>
             </div>
             <div class="card-footer">
@@ -98,6 +101,7 @@
                     <span th:text="#{message.change-language}+': '"></span>
                     <a th:href="@{'/language?lang=en'}" th:text="#{message.locale.en}"></a><span> /</span>
                     <a th:href="@{'/language?lang=ru'}" th:text="#{message.locale.ru}"></a>
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 </div>
             </div>
         </div>
