Improved rooms, access to buttons and pages

--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -72,7 +72,7 @@
                 </form>
                 <div>
                 </div>
-                <a th:href="@{/rooms/}" class="btn btn-dark btn-block"
+                <a th:href="@{/rooms}" class="btn btn-dark btn-block"
                    th:text="#{message.rooms-page.button.back}">Back to the list of rooms</a>
             </article>
             <div class="text-center">
@@ -87,6 +87,6 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script th:src="@{/resources/js/hotel.js}"></script>
+<script th:src="@{/js/hotel.js}"></script>
 </body>
 </html>
