--- a/src/main/resources/templates/roomsList.html
+++ b/src/main/resources/templates/roomsList.html
@@ -32,10 +32,10 @@
                         <th scope="col" th:text="#{message.hotel.capacity}">Capacity</th>
                         <th scope="col" th:text="#{message.hotel.class}">Class</th>
                         <th scope="col" th:text="#{message.roomslist-page.price}">Price</th>
-                        <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')"
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"
                             th:text="#{message.roomseditor-page.edit}">Edit
                         </th>
-                        <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')"
+                        <th scope="col" sec:authorize="hasRole('ADMIN')"
                             th:text="#{message.roomseditor-page.delete}" }>Delete
                         </th>
                     </tr>
@@ -48,12 +48,12 @@
                             <td th:text="#{'message.capacity.'+${room.capacity}}"></td>
                             <td th:text="#{'message.class.'+${room.classID}}"></td>
                             <td th:text="${room.price}"></td>
-                            <td>
-                                <a sec:authorize="hasRole('ROLE_ADMIN')"
+                            <td sec:authorize="hasRole('ROLE_ADMIN')">
+                                <a
                                    th:href="@{'/rooms/edit/'+${room.id}}" class="btn btn-dark float-left"
                                    th:text="#{message.roomseditor-page.edit}">Edit</a>
                             </td>
-                            <td>
+                            <td sec:authorize="hasRole('ROLE_ADMIN')">
                                 <a sec:authorize="hasRole('ROLE_ADMIN')"
                                    th:href="@{'/rooms/delete/'+${room.id}}" class="btn btn-dark float-left"
                                    th:text="#{message.roomseditor-page.delete}">Delete</a>
@@ -87,7 +87,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a sec:authorize="hasRole('ROLE_ADMIN')"
+                <a sec:authorize="hasRole('ADMIN')"
                    th:href="@{'/rooms/new'}" class="btn btn-dark float-right"
                    th:text="#{message.roomseditor-page.newroom}">New room</a>
                 <div>
