--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -28,18 +28,34 @@
                     <thead>
                     <tr>
                         <th scope="col">#</th>
+                        <th scope="col" th:text="#{message.hotel.login}">Login</th>
                         <th scope="col" th:text="#{message.hotel.permission}">Permission</th>
                         <th scope="col" th:text="#{message.hotel.firstname}">Name</th>
                         <th scope="col" th:text="#{message.hotel.lastname}">Last name</th>
+                        <th scope="col" th:text="#{message.delete}">Delete</th>
+                        <th scope="col" th:text="#{message.block}">Block</th>
                     </tr>
                     </thead>
                     <tbody>
                     <th:block th:each="user : ${pagedList}">
                         <tr>
                             <th th:text="${user.id}" scope="row">1</th>
+                            <td th:text="${user.login}"></td>
                             <td th:text="#{'message.permission.'+${user.permission}}"></td>
                             <td th:text="${user.firstName}"></td>
                             <td th:text="${user.lastName}"></td>
+                            <td>
+                                <a th:if="${user.permission.toString()=='USER'}"
+                                   th:href="@{'/users/delete/'+${user.id}}"
+                                   th:text="#{message.delete}"
+                                   class="btn btn-dark">Delete</a>
+                            </td>
+                            <td>
+                                <a th:if="${user.permission.toString()=='USER'}"
+                                   th:href="@{'/users/'+${user.block}+'/'+${user.id}}"
+                                   th:text="#{'message.blockstatus.'+${user.block.toString()}}"
+                                   class="btn btn-dark">Block</a>
+                            </td>
                         </tr>
                     </th:block>
                     </tbody>
