--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -21,9 +21,12 @@
             <div class="card-header">
                 <h3 id="index-header" class="text-center"
                     th:text="#{message.admin-page.header}">Administration page</span></h3>
-                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-yellow center-align">Pending requests</a>
-                <a th:href="@{/approvedrequests}" th:text="#{message.admin-page.approved}" class="btn btn-grey center-align">Approved requests</a>
-                <a th:href="@{/deniedrequests}" th:text="#{message.admin-page.denied}" class="btn btn-grey center-align">Denied requests</a>
+                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-yellow center-align">Pending
+                    requests</a>
+                <a th:href="@{/admin/approved-requests}" th:text="#{message.admin-page.approved}"
+                   class="btn btn-grey center-align">Approved requests</a>
+                <a th:href="@{/admin/denied-requests}" th:text="#{message.admin-page.denied}"
+                   class="btn btn-grey center-align">Denied requests</a>
             </div>
             <div class="card-body">
                 <p class="white" th:unless="${pagedList.hasContent()}" th:text="#{message.admin-page.no-request}">
@@ -49,16 +52,17 @@
                             <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
                             <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                             <td>
-                                <a th:href="@{'/getallrooms/'+${request.id}}" th:text="#{message.find}"
+                                <a th:href="@{'admin/suitable-rooms/'+${request.id}}" th:text="#{message.find}"
                                    class="btn btn-dark float-left">Find</a>
                             </td>
                             <td>
                                 <a onclick="showDenyPopup(true)" class="btn login_btn float-right"
                                    th:text="#{message.deny}">deny</a>
-                                <div th:with="denyMessage = ${request.denyMessage}">
-                                    <form method="post" th:action="@{/admin/deny}" th:object="${denyMessage}">
+                                <div th:with="deniedRequest = ${request.deniedRequest}">
+                                    <form method="post" th:action="@{/admin/deny}" th:object="${deniedRequest}">
                                         <div class="form-group">
-                                            <input id="message" name="message" th:value="${request.denyMessage.message}" type="text">
+                                            <input id="reason" name="reason" th:value="${request.deniedRequest.reason}"
+                                                   type="text">
                                             <button type="submit" class="btn btn-primary btn-block"
                                                     th:text="#{message.deny}"> Deny
                                             </button>
@@ -66,14 +70,11 @@
                                                th:text="#{message.cancel}">Cancel</a>
                                         </div>
                                         <input hidden name="id" id="id"
-                                               th:value="${request.denyMessage.id}"/>
+                                               th:value="${request.deniedRequest.id}"/>
 
                                     </form>
                                 </div>
-
                             </td>
-
-
                         </tr>
                     </th:block>
                     </tbody>
@@ -105,9 +106,9 @@
             <div class="card-footer">
                 <a th:href="@{/index}" th:text="#{message.admin-page.user}" class="btn btn-info float-left">User
                     menu</a>
-                <a th:href="@{/roomseditor}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
+                <a th:href="@{/rooms}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
                     rooms</a>
-                <a th:href="@{/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
+                <a th:href="@{/admin/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
                     users</a>
                 <div class="text-center">
                     <span th:text="#{message.change-language}+': '"></span>
