fixed request for denied service

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -90,7 +90,7 @@
 
 
 
-             <!--   <div th:if="${deniedRequests.hasContent()}">
+                <div th:if="${deniedRequests.hasContent()}">
                     <p class="white" th:text="#{message.status.DENIED}"> Denied requests:</p>
                     <table class="table table-bordered white">
                         <thead>
@@ -149,7 +149,6 @@
                         </ul>
                     </nav>
                 </div>
--->
 
 
 
