--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -40,37 +40,41 @@
                         <th scope="col" th:text="#{message.hotel.checkin}">Check in</th>
                         <th scope="col" th:text="#{message.hotel.checkout}">Check out</th>
                         <th scope="col" th:text="#{message.find}">Find</th>
-                        <th scope="col" th:text="#{message.delete}">Deny</th>
+                        <th scope="col" th:text="#{message.deny}">Deny</th>
                     </tr>
                     </thead>
                     <tbody>
                     <th:block th:each="request : ${pagedList}">
                         <tr>
-                            <th th:text="${request.id}" scope="row">1</th>
+                            <td th:text="${request.id}" scope="row">1</td>
                             <td th:text="#{'message.capacity.'+${request.capacity}}"></td>
                             <td th:text="#{'message.class.'+${request.classID}}"></td>
                             <td th:text="${#dates.format(request.checkIn,'MM/dd/yyyy')}"></td>
                             <td th:text="${#dates.format(request.checkOut,'MM/dd/yyyy')}"></td>
                             <td>
                                 <a th:href="@{'admin/suitable-rooms/'+${request.id}}" th:text="#{message.find}"
-                                   class="btn btn-dark float-left">Find</a>
+                                   class="btn btn-success float-center">Find</a>
                             </td>
                             <td>
-                                <a onclick="showDenyPopup(true)" class="btn login_btn float-right"
+                                <a th:id="'deny-a-'+${request.id}" th:onclick="'showDenyPopup(true,'+${request.id}+')'"
+                                   class="btn button-deny  btn-warning float-center"
                                    th:text="#{message.deny}">deny</a>
-                                <div th:with="deniedRequest = ${request.deniedRequest}">
+                                <div th:id="'deny-div-'+${request.id}" hidden
+                                     th:with="deniedRequest = ${request.deniedRequest}">
                                     <form method="post" th:action="@{/admin/deny}" th:object="${deniedRequest}">
                                         <div class="form-group">
                                             <input id="reason" name="reason" th:value="${request.deniedRequest.reason}"
-                                                   type="text">
-                                            <button type="submit" class="btn btn-primary btn-block"
-                                                    th:text="#{message.deny}"> Deny
-                                            </button>
-                                            <a onclick="showDenyPopup(false)" class="btn login_btn float-right"
-                                               th:text="#{message.cancel}">Cancel</a>
-                                        </div>
-                                        <input hidden name="id" id="id"
-                                               th:value="${request.deniedRequest.id}"/>
+                                                   type="text" th:placeholder="#{message.admin-page.enter-reason}">
+                                            <div>
+                                                <button type="submit" class="btn btn-danger deny-btn"
+                                                        th:text="#{message.deny}"> Deny
+                                                </button>
+                                                <a th:onclick="'showDenyPopup(false,'+${request.id}+')'"
+                                                   class="btn deny-btn btn-info float-center"
+                                                   th:text="#{message.cancel}">Cancel</a>
+                                            </div>
+                                            <input hidden name="id" id="id"
+                                                   th:value="${request.deniedRequest.id}"/>
 
                                     </form>
                                 </div>
@@ -121,7 +125,7 @@
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script th:src="@{resources/js/hotel.js}"></script>
+<script th:src="@{js/hotel.js}"></script>
 
 </body>
 </html>
