improved index page

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -20,7 +20,7 @@
         <div class="card">
             <div class="card-header">
                 <h3 id="index-header" class="text-center"
-                    th:text="#{message.admin-page.header}">Administration page</span></h3>
+                    th:text="#{message.admin-page.header}">Administration page</h3>
                 <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-yellow center-align">Pending
                     requests</a>
                 <a th:href="@{/admin/approved-requests}" th:text="#{message.admin-page.approved}"
