--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,8 +12,13 @@ html, body {
     color: #ff5a5a !important;
 }
 
-.page-item {
+.menu-btn {
+    min-width: 200px;
+}
 
+.menu-active {
+    background-color: #37d1ff !important;
+    color: #000 !important;
 }
 
 .page-link {
@@ -69,8 +74,22 @@ h3 {
     margin-bottom: 0;
 }
 
-#index-header {
-    padding-bottom: 0 !important;
+#header {
+    background-color: #00000073;
+}
+
+.card-header-flex {
+    display: flex;
+    justify-content: space-between;
+}
+
+.language {
+    padding-top: 19px;
+}
+
+.header-button {
+    margin-top: 12px !important;
+    height: 37px;
 }
 
 #checkout {
@@ -79,9 +98,6 @@ h3 {
 
 #signup {
     color: #FFC312;
-}
-
-.card-body {
 }
 
 .input-group-text {
@@ -138,8 +154,8 @@ h3 {
     position: absolute;
 }
 
-.deny-btn{
-    width:75px;
+.deny-btn {
+    width: 75px;
 }
 
 .container {
@@ -148,6 +164,22 @@ h3 {
 }
 
 .card {
+    height: -webkit-fill-available;
+    margin-bottom: auto;
+    width: auto;
+    min-width: 855px;
+    background-color: rgba(0, 0, 0, 0.6) !important;
+}
+
+.create-account {
+    width: 97%;
+}
+
+.login-link {
+    padding-left: 5px;
+}
+
+.card-login {
     height: auto;
     margin-top: auto;
     margin-bottom: auto;
@@ -164,7 +196,7 @@ table {
     text-align: center !important;
 }
 
-.button-deny{
+.button-deny {
     width: 200px;
 }
 
@@ -204,7 +236,6 @@ table {
 input:focus {
     outline: 0 0 0 0 !important;
     box-shadow: 0 0 0 0 !important;
-
 }
 
 .remember {
