--- a/src/main/resources/templates/approved-requests.html
+++ b/src/main/resources/templates/approved-requests.html
@@ -18,16 +18,36 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-            <div class="card-header">
+
+            <div id="header" class="card-header card-header-flex">
                 <h3 id="index-header" class="text-center"
                     th:text="#{message.admin-page.header}">Administration page</h3>
-                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-grey center-align">Pending
+                <div class="card-header-flex">
+                    <div class="language">
+                        <span th:text="#{message.change-language}+': '"></span>
+                        <a th:href="@{'/language?lang=en'}">
+                            <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
+                        </a> <span> /</span>
+                        <a th:href="@{'/language?lang=ru'}">
+                            <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
+                        </a>
+                    </div>
+                    <form name="logoutForm" th:action="@{/logout}" method="post">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                        <input type="submit" class="btn header-button btn-dark" th:value="#{message.signout}"/>
+                    </form>
+                </div>
+            </div>
+
+            <div>
+                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-yellow center-align">Pending
                     requests</a>
                 <a th:href="@{/admin/approved-requests}" th:text="#{message.admin-page.approved}"
-                   class="btn btn-yellow center-align">Approved requests</a>
+                   class="btn btn-grey center-align">Approved requests</a>
                 <a th:href="@{/admin/denied-requests}" th:text="#{message.admin-page.denied}"
                    class="btn btn-grey center-align">Denied requests</a>
             </div>
+
             <div class="card-body">
                 <p class="white" th:if="${pagedList.hasContent()==false}" th:text="#{message.admin-page.no-request}">
                     There are no approved requests</p>
@@ -92,11 +112,8 @@
                     menu</a>
                 <a th:href="@{/roomseditor}" th:text="#{message.admin-page.editrooms}" class="btn btn-dark float-right">Edit
                     rooms</a>
-                <div class="text-center">
-                    <span th:text="#{message.change-language}+': '"></span>
-                    <a th:href="@{'/language?lang=en'}" th:text="#{message.locale.en}"></a><span> /</span>
-                    <a th:href="@{'/language?lang=ru'}" th:text="#{message.locale.ru}"></a>
-                </div>
+                <a th:href="@{/admin/users}" th:text="#{message.admin-page.usersmenu}" class="btn btn-dark float-right">Edit
+                    users</a>
             </div>
         </div>
     </div>
