fixed buttons colors

--- a/src/main/resources/templates/denied-requests.html
+++ b/src/main/resources/templates/denied-requests.html
@@ -39,12 +39,12 @@
             </div>
 
             <div>
-                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-yellow center-align">Pending
+                <a th:href="@{/admin}" th:text="#{message.admin-page.pending}" class="btn btn-grey center-align">Pending
                     requests</a>
                 <a th:href="@{/admin/approved-requests}" th:text="#{message.admin-page.approved}"
                    class="btn btn-grey center-align">Approved requests</a>
                 <a th:href="@{/admin/denied-requests}" th:text="#{message.admin-page.denied}"
-                   class="btn btn-grey center-align">Denied requests</a>
+                   class="btn btn-yellow center-align">Denied requests</a>
             </div>
 
             <div class="card-body">
