--- a/src/main/resources/templates/roomsList.html
+++ b/src/main/resources/templates/roomsList.html
@@ -99,9 +99,13 @@
             <div class="card-footer">
                 <div class="text-center">
                     <span th:text="#{message.change-language}+': '"></span>
-                    <a th:href="@{'/language?lang=en'}" th:text="#{message.locale.en}"></a><span> /</span>
-                    <a th:href="@{'/language?lang=ru'}" th:text="#{message.locale.ru}"></a>
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    <a th:href="@{'/language?lang=en'}">
+                        <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
+                    </a> <span> /</span>
+                    <a th:href="@{'/language?lang=ru'}">
+                        <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
+                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                    </a>
                 </div>
             </div>
         </div>
