--- a/src/main/resources/templates/view-request.html
+++ b/src/main/resources/templates/view-request.html
@@ -87,11 +87,14 @@
                         <div>
                             <a th:href="@{/index}" class="btn btn-dark text-center" th:text="#{message.back}">Back</a>
                             <div>
-                                <div>
+                                <div class="text-center">
                                     <span th:text="#{message.change-language}+': '"></span>
-                                    <a th:href="@{'/language?lang=en'}"
-                                       th:text="#{message.locale.en}"></a><span> /</span>
-                                    <a th:href="@{'/language?lang=ru'}" th:text="#{message.locale.ru}"></a>
+                                    <a th:href="@{'/language?lang=en'}">
+                                        <img width="35px" th:src="@{/images/en.png}" th:alt="#{message.locale.en}">
+                                    </a> <span> /</span>
+                                    <a th:href="@{'/language?lang=ru'}">
+                                        <img width="35px" th:src="@{/images/ru.png}" th:alt="#{message.locale.ru}">
+                                    </a>
                                 </div>
                             </div>
                         </div>
